--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.1.0",
     "eslint-config-airbnb": "^18.2.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
