--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "eslint-config-airbnb": "^18.2.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
