--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
-    "bootstrap": "^5.1.0",
     "eslint-config-airbnb": "^18.2.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
