--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
     "antd": "^4.16.13",
     "axios": "^0.21.1",
     "eslint-config-airbnb": "^18.2.1",
